Refactor the console app to make it more modular, usable and maintainable

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,10 @@
         "Username": "mediocre_dad_gamer",
         "ChannelToJoin": "mediocre_dad_gamer",
         "Server": "irc.chat.twitch.tv"
+    },
+    "BotApi": {
+        "Host": "localhost",
+        "Protocol": "https",
+        "Port": 5001
     }
 }
